heimdall/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: heimdall-ingress
  namespace: heimdall
spec:
  rules:
    - host: heimdall.home.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: heimdall-service
                port:
                  number: 80
